--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="/css/main.css"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <h1>Hocus Pocus</h1>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script defer src="./js/main.js"></script>
+  </body>
+</html>
