--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>Hocus Pocus</h1>
-    </header>
-    <main></main>
-    <footer></footer>
-    <script defer src="./js/main.js"></script>
+    <div class="container">
+        <header>
+          <h1>Hocus Pocus</h1>
+        </header>
+        <main></main>
+        <footer></footer>
+        <script defer src="./js/main.js"></script>
+    </div>
   </body>
 </html>
