--- a/index.html
+++ b/index.html
@@ -9,12 +9,35 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1>Hocus Pocus</h1>
-      </header>
-      <main></main>
-      <script defer src="./js/main.js"></script>
-      <footer></footer>
+        <header>
+          <h1>Hocus Pocus</h1>
+        </header>
+        <main>
+          <section class="article">
+              <div class="banner__info">
+                <h1>About Us</h1>
+                <p>ingredient</p>
+              </div>
+              <div class= "banner__icons">
+                <h3>our specialization</h3>
+                <span><img class="banner__icons-gluten" src="" alt="gluten icon" >GLUTEN FREE</span>
+                <span> <img class="banner__icons-sugar" src="" alt="sugar icon">SUGAR FREE</span>
+                <span><img class="banner__icons-lactose" src="" alt="lactose icon" >LACTOSE-FREE</span> 
+              </div>
+              <div class="banner__img">
+                <img src="./images/cake.png" >
+              </div>
+
+
+          </section>
+
+
+        
+        </main>
+     
+        </main>
+        <script defer src="./js/main.js"></script>
     </div>
+    <footer></footer>
   </body>
 </html>
