--- a/index.html
+++ b/index.html
@@ -12,7 +12,31 @@
       <header>
         <h1>Hocus Pocus</h1>
       </header>
-      <main></main>
+      <main>
+
+        <section class="banner">
+
+
+          <div class="banner__info">
+            <h1>TRADICIONAL BAKERY<h1> 
+            <h3>our specialization</h3>
+            <button> About us </button>
+          </div>
+          <div class="banner__icons">
+            <span><img class="icon" src="" alt="vegan icon" >VEGAN</span>
+            <span> <img class="icon" src="" alt="gluten free icon">GLUTEN FREE</span>
+            <span><img class="icon" src="" alt="sugar free icon" >SUGAR FREE</span>
+            <span><img class="icon" src="" alt="personal icon" >PERSONAL</span>
+          </div>
+            
+          
+
+
+          <div class="bannet__img"></div>
+        </section>
+
+
+      </main>
       <script defer src="./js/main.js"></script> 
     </div>
     <footer></footer>
