--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <h1>Hocus Pocus</h1>
         </header>
         <main>
-          <section class="article">
+          <section class="banner">
               <div class="banner__info">
                 <h1>About Us</h1>
                 <p>ingredient</p>
