--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <h1>Welcome to the Hocus Pocus</h1>
                 <p class="">We offer Baked goods to suit any occasion, whether you’re looking for something fruity or something chocolatey.
                   Here at The Pastry Artisan all our products are created and freshly baked on-site to provide customers with only the highest quality bakes.</p>
+                  <button class="banner_btn">More</button>
               </div>
               <div class= "banner__icons">
-                <h3>our specialization</h3>
+                <h4>our specialization</h4>
                 <span><img class="banner__icons-gluten" src="./images/iconGluten.png" alt="gluten icon" >GLUTEN FREE</span>
                 <span><img class="banner__icons-sugar" src="./images/iconSugar.png" alt="sugar icon">SUGAR FREE</span>
                 <span><img class="banner__icons-lactose" src="./images/iconLactose.png" alt="lactose icon" >LACTOSE FREE</span> 
