--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
+    <title>Hocus pocus</title>
   </head>
   <body>
     <div class="container">
