--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Hocus Pocus</h1>
       </header>
       <main></main>
-      <script defer src="./js/main.js"></script>
-      <footer></footer>
+      <script defer src="main.js"></script>
     </div>
+    <footer></footer>
   </body>
 </html>
