--- a/index.html
+++ b/index.html
@@ -14,19 +14,22 @@
           <section class="banner">
               <div class="banner__info">
                 <h1>Welcome to the Hocus Pocus</h1>
-                <p class="">We offer Baked goods to suit any occasion, whether you’re looking for something fruity or something chocolatey.
-                  Here at The Pastry Artisan all our products are created and freshly baked on-site to provide customers with only the highest quality bakes.</p>
+                <p class="p1">We offer Baked goods to suit any occasion, whether you’re looking for something fruity or something chocolatey.
+                  Here at </p>
+                <p class="p2"> The Pastry Artisan all our products are created and freshly baked on-site to provide customers with only the highest quality bakes.</p>
                   <button class="banner_btn">More</button>
               </div>
-              <div class= "banner__icons">
-                <h4>our specialization</h4>
-                <span><img class="banner__icons-gluten" src="./images/iconGluten.png" alt="gluten icon" >GLUTEN FREE</span>
-                <span><img class="banner__icons-sugar" src="./images/iconSugar.png" alt="sugar icon">SUGAR FREE</span>
-                <span><img class="banner__icons-lactose" src="./images/iconLactose.png" alt="lactose icon" >LACTOSE FREE</span> 
-              </div>
-              <div class="banner__img">
-                <img src="./images/cake.png" >
-              </div>
+              <div class="banner__mobile">
+                <div class= "banner__icons">
+                  <h2 class="subtitle">Intolerance</h2>
+                  <span><img class="banner__icons-gluten" src="./images/iconGluten.png" alt="gluten icon" >GLUTEN FREE</span>
+                  <span><img class="banner__icons-sugar" src="./images/iconSugar.png" alt="sugar icon">SUGAR FREE</span>
+                  <span><img class="banner__icons-lactose" src="./images/iconLactose.png" alt="lactose icon" >LACTOSE FREE</span> 
+                </div>
+                <div class="banner__img">
+                  <img src="./images/cake.png" >
+                </div>
+            </div>
 
 
           </section>
