--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="cakemouse"></div>
+    <img src="cakemouse.png" alt="cakemouse">
     <div class="container">
-     
+      
+      </div>
         <main>
           <section class="banner">
               <div class="banner__info">
@@ -19,7 +22,7 @@
                   <button class="banner_btn">More</button>
               </div>
               <div class= "banner__icons">
-                <h4>our specialization</h4>
+                <h4>INTOLERANCE</h4>
                 <span><img class="banner__icons-gluten" src="./images/iconGluten.png" alt="gluten icon" >GLUTEN FREE</span>
                 <span><img class="banner__icons-sugar" src="./images/iconSugar.png" alt="sugar icon">SUGAR FREE</span>
                 <span><img class="banner__icons-lactose" src="./images/iconLactose.png" alt="lactose icon" >LACTOSE FREE</span> 
