--- a/index.html
+++ b/index.html
@@ -77,33 +77,13 @@
           </div>
         </section>
 
-        <section class="cakeShow">
-          <div class="cakeShow__card">
-            <img
-              src="/images/Blood cake.jpg"
-              alt="ImagenCake"
-              class="carta-imagen"
-            />
-            <div class="information">
-              <h3 class="nombre">Bloody Cake</h3>
-              <p class="precio">€22.00</p>
-              <p2 class="peso">300gr</p2>
-              <a href="#"
-                ><img
-                  class="infologo"
-                  src="/images/boton-de-informacion (2).png"
-                  alt="info"
-              /></a>
-              <button class="addbutton">add</button>
-            </div>
-          </div>
-        </section>
+        <section class="cakeShow" id="DOMcakes"></section>
       </main>
     </div>
 
     <footer>
       <nav class="below">
-        <a class="belowsocialmedia " href="#">
+        <a class="belowsocialmedia" href="#">
           <i class="lni lni-instagram-filled"></i>
         </a>
 
